# coral.ai

./: README.rst  pyproject.toml  tflite_runtime-1.14.0-cp37-cp37m-linux_x86_64.whl
example/tflite/: tags
example/tflite/python/examples/classification/: install_requirements.sh
tests/: test_coral_ai.py
