[tool.poetry]
name = "coral.ai"
version = "0.1.0"
description = ""
authors = ["Roland Siegbert <roland@siegbert.info>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.18.1"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
